Make `ConfigurationExceptions.errors()` retain set order